# docwhisper

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: observability.md
docwhisper/: __init__.py  answer.py  cli.py  config.py  eval.py  ingest.py  pipeline.py  retrieve.py  server.py  telemetry.py
examples/: eval_questions.json  quickstart.py  run_quickstart.py  use_ollama.py
examples/sample_docs/: returns_policy.md  technical_faq.md
tests/: conftest.py  test_answer.py  test_ingest.py  test_retrieve.py  test_telemetry.py
